# Robot-Programming_Project

./: README.md
rp_gazebo_worlds/: package.xml
rp_tiago_gazebo/: package.xml
rp_tiago_gazebo/launch/: tiago_gazebo.launch
tiago_arm_controller/: package.xml
tiago_arm_controller/src/: tiago_ik.cpp
tiago_base_controller/: package.xml
tiago_base_controller/scripts/: tiago_base_script.cpp
tiago_base_controller/src/: base_controller.cpp
tiago_grasping_on_the_move/: CMakeLists.txt  package.xml
tiago_grasping_on_the_move/launch/: tiago_grasping_on_the_move.launch
tiago_grasping_on_the_move/scripts/: tiago_arm.cpp  tiago_grasping_on_the_move.cpp
tiago_grasping_on_the_move/src/: base_controller.cpp  tiago_ik.cpp
tiago_grasping_on_the_move/src/tiago_grasping_on_the_move/BaseController/: base_controller.cpp
