<?xml version="1.0"?>
<package format="2">
  <name>tiago_grasping_on_the_move</name>
  <version>0.0.1</version>
  <description>The tiago_grasping_on_the_move package</description>

  <maintainer email="schiavella.1884561@studenti.uniroma1.it">Claudio Schiavella</maintainer>

    <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <license>TODO</license>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <export></export>
</package>
